--- a/.ci/docker-compose.yml
+++ b/.ci/docker-compose.yml
@@ -10,7 +10,8 @@ services:
 #    env_file: ./../src/test.env
     command: bash -c "python -m unittest discover -s ./tests/core/models -p "test_*.py";
       python -m unittest core.operators.test_vid_vec_rep_resnet;
-      python -m unittest core.operators.test_audio_vec_embedding"
+      python -m unittest core.operators.test_audio_vec_embedding;
+      python -m unittest core.operators.test_media_file_hash"
 #      bash -c "python -c 'import time';
 #      while ! curl store:9200 | grep -q 'You Know, for Search'
 #      && ! curl queue:15672 | grep -q '<!DOCTYPE html>';
