--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Bandit Scan
         uses: shundor/python-bandit-scan@9cc5aa4a006482b8a7f91134412df6772dbda22c # v1.0
         env:
-          EXIT_ZERO_VAL: ${{ (github.event_name == 'pull_request') && 0 || 1 }}
+          EXIT_ZERO_VAL: ${{ (github.event_name == 'pull_request') && true || false }}
         with: # optional arguments
           # exit with 1 on pull request, else exit with 0 even if results found (on push to main or cron job)
           exit_zero: env.EXIT_ZERO_VAL # optional, default is DEFAULT
