--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -39,9 +39,6 @@ jobs:
       # actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     runs-on: ubuntu-latest
-    env:
-      EXIT_ZERO_VAL: true
-
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
@@ -49,9 +46,8 @@ jobs:
 
       - name: Bandit Scan
         uses: shundor/python-bandit-scan@9cc5aa4a006482b8a7f91134412df6772dbda22c # v1.0
-        if: github.event_name == 'pull_request'
         env:
-          EXIT_ZERO_VAL: false
+          EXIT_ZERO_VAL: ${{ (github.event_name != 'pull_request') && true || false }}
         with: # optional arguments
           # exit with 1 on pull request, else exit with 0 even if results found (on push to main or cron job)
           exit_zero: env.EXIT_ZERO_VAL # optional, default is DEFAULT
