--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,85 @@ classifiers = [
     "Topic :: Multimedia :: Sound/Audio",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+
+dependencies = [
+    # interact with AWS from Python
+    "boto3>=1.37.30",      
+    # convert dictionaries into dataclass
+    "dacite>=1.9.2",   
+    # for audio processing
+    "pydub>=0.25.1",       
+    # load/save config files in a readable format
+    "pyyaml>=6.0.2",       
+    # to send HTTP requests and handle responses
+    "requests>=2.32.3",   
+    # for request/responses and routing
+    "werkzeug>=3.1.3",    
+    # download files using a URL
+    "wget>=3.2",           
+    # for image processing
+    "pillow>=11.1.0",      
+    # numerical computing
+    "numpy>=1.26,<2.2.0",  
+]
+
+# deps that are optional 
+[project.optional-dependencies]
+dev = [
+    # for reading, editing configs
+    "tomlkit>=0.13.2",     
+    # code linter and formatter
+    "ruff>=0.11.4",       
+    # runs checks before each git commits
+    "pre-commit>=4.2.0", 
+    # for Jupyter support and interface
+    "jupyter>=1.1.1",     
+    "notebook>=7.3.3",    
+]
+
+[project.urls]
+Homepage = "https://tattle.co.in/products/feluda/"
+Repository = "https://github.com/tattle-made/feluda"
+Issues = "https://github.com/tattle-made/feluda/issues"
+Changelog = "https://github.com/tattle-made/feluda/blob/main/CHANGELOG.md"
+
+[project.scripts]
+##
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch]
+installer = "uv"
+
+[tool.semantic_release]
+version_variable = ["pyproject.toml:project.version"]
+
+[tool.semantic_release.branches.main]
+match = "main"
+prerelease = false
+tag_format = "{name}-{version}"
+
+# UV workspace configuration
+# each operator performs specific tasks
+[tool.uv.workspace]
+members = [
+    "operators/classify_video_zero_shot",
+    "operators/cluster_embeddings",
+    "operators/detect_lewd_images",
+    "operators/detect_text_in_image_tesseract",
+    "operators/dimension_reduction",
+    "operators/image_vec_rep_resnet",
+    "operators/vid_vec_rep_clip",
+    "operators/video_hash_tmk",
+]
+
+[tool.ruff]
+target-version = "py310"
+line-length = 88
+exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["feluda"]
+
