--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,25 +32,8 @@ classifiers = [
 ]
 
 dependencies = [
-    # interact with AWS from Python
-    "boto3>=1.37.30",
-    # convert dictionaries into dataclass
     "dacite>=1.9.2",
-    # for audio processing
-    "pydub>=0.25.1",
-    # load/save config files in a readable format
     "pyyaml>=6.0.2",
-    # to send HTTP requests and handle responses
-    "requests>=2.32.3",
-    # for request/responses and routing
-    "werkzeug>=3.0.3",
-    # download files using a URL
-    "wget>=3.2",
-    # for image processing
-    "pillow>=11.1.0",
-    # numpy is set to >=1.26,<2.2.0 to maintain compatibility with TensorFlow
-    # versions >=2.2.0 may lead to conflicts
-    "numpy>=1.26,<2.2.0",
 ]
 
 # deps that are optional
@@ -65,6 +48,29 @@ dev = [
     # for Jupyter support and interface
     "jupyter>=1.1.1",
     "notebook>=7.3.3",
+]
+audio = [
+    "pydub>=0.25.1",
+    "wget>=3.2",
+]
+
+video = [
+    "wget>=3.2",
+    "werkzeug>=3.1.3",
+]
+
+image =[
+    "numpy>=1.26,<2.2.0",
+    "pillow>=11.1.0",
+    "wget>=3.2",
+    "requests>=2.32.3",
+    "werkzeug>=3.1.3",
+]
+
+s3 = ["boto3"]
+
+all = [
+    "feluda[audio,video,image,s3]"
 ]
 
 [project.urls]
