--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,9 @@ members = [
     "operators/video_hash_tmk",
 ]
 
+[tool.uv.sources]
+feluda = { workspace = true }
+
 [tool.ruff]
 target-version = "py310"
 line-length = 88
