--- a/operators/vid_vec_rep_clip/pyproject.toml
+++ b/operators/vid_vec_rep_clip/pyproject.toml
@@ -3,6 +3,7 @@ name = "feluda-vid-vec-rep-clip"
 version = "0.1.4"
 requires-python = ">=3.10"
 dependencies = [
+    "feluda[video]",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
     "transformers>=4.51.1",
