--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,15 @@ dev = [
     "jupyter>=1.1.1",
     "notebook>=7.3.3",
     "pytest>=8.3.2",
+    # documentation dependencies
+    "sphinx>=7.0.0",
+    "sphinx-rtd-theme>=1.3.0",
+    "myst-nb>=1.0.0",
+    "sphinx-copybutton>=0.5.0",
+    "sphinx-design>=0.4.0",
+    # docstring style checking
+    "pydocstyle>=6.3.0",
+    "docformatter>=0.6.0",
 ]
 audio = ["pydub>=0.25.1", "wget>=3.2", "boto3>=1.38.42"]
 
