--- a/operators/classify_video_zero_shot/pyproject.toml
+++ b/operators/classify_video_zero_shot/pyproject.toml
@@ -2,7 +2,12 @@
 name = "feluda-classify-video-zero-shot"
 version = "0.1.0"
 requires-python = ">=3.10"
-dependencies = ["torch>=2.6.0", "pillow>=11.1.0", "transformers>=4.51.1"]
+dependencies = [
+    "feluda[video]",
+    "torch>=2.6.0",
+    "pillow>=11.1.0",
+    "transformers>=4.51.1"
+    ]
 
 [build-system]
 requires = ["hatchling"]
