--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,11 +98,11 @@ members = [
     "operators/classify_video_zero_shot",
     "operators/cluster_embeddings",
     "operators/detect_lewd_images",
-    "operators/detect_text_in_image_tesseract",
+    "operators/detect_text_in_image",
     "operators/dimension_reduction",
-    "operators/image_vec_rep_resnet",
-    "operators/vid_vec_rep_clip",
-    "operators/video_hash_tmk",
+    "operators/image_vec_rep",
+    "operators/vid_vec_rep",
+    "operators/video_hash",
 ]
 
 [tool.uv.sources]
